docs/tests/parser/types/valid/TypeVectorSize2.src
fn void test() {
    let vec<2> v;
}
