docs/tests/parser/types/invalid/TypeVectorMissingSize.src
fn void test() {
    let vec<> v;
}
